--- a/index.html
+++ b/index.html
@@ -12,5 +12,27 @@
   </head>
   <body>
     <h1>Tic Tac Toe</h1>
+
+    <div id="gridContainer">
+      <div class="spaceDiv" id="0" value="0">
+      </div>
+      <div class="spaceDiv" id="1" value="1">
+      </div>
+      <div class="spaceDiv" id="2" value="2">
+      </div>
+      <div class="spaceDiv" id="3" value="3">
+      </div>
+      <div class="spaceDiv" id="4" value="4">
+      </div>
+      <div class="spaceDiv" id="5" value="5">
+      </div>
+      <div class="spaceDiv" id="6" value="6">
+      </div>
+      <div class="spaceDiv" id="7" value="7">
+      </div>
+      <div class="spaceDiv" id="8" value="8">
+      </div>
+    </div>
+    <h1 id="win"></h1>
   </body>
 </html> 
