add play again button
Co-Authored-by: Aaron Minnick <abminnick@gmail.com>
Co-Authored-by: Karen Axon <kaxonwa@gmail.com>

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <div class="spaceDiv" id="8" value="8">
       </div>
     </div>
-    <h1 id="win"></h1>
+    <h1 id="win"><button class="btn btn-dark" id="play-again">Play again!</button></h1>
+    
   </body>
 </html> 
