--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <title>Tic Tac Toe</title>
   </head>
   <body>
+    <canvas id="starfield" width="2400" height ="600"></canvas>
+    <canvas id="scroll-starfield" width="2400" height ="600"></canvas>
+    <canvas id="scroll-starfield2" width="2400" height ="600"></canvas>
+
     <h1>Tic Tac Toe</h1>
 
     <div id="gridContainer">
