hide the board at start
Co-Authored-by: Aaron Minnick <abminnick@gmail.com>

--- a/index.html
+++ b/index.html
@@ -11,30 +11,33 @@
     <title>Tic Tac Toe</title>
   </head>
   <body>
-    <canvas id="starfield" width="2400" height ="600"></canvas>
-    <canvas id="scroll-starfield" width="2400" height ="600"></canvas>
-    <canvas id="scroll-starfield2" width="2400" height ="600"></canvas>
+    <canvas class = "scroll" id="scroll-starfield0" width="2400" height ="600"></canvas>
+    <canvas class = "scroll" id="scroll-starfield1" width="2400" height ="600"></canvas>
+    <canvas class = "scroll" id="scroll-starfield2" width="2400" height ="600"></canvas>
+    <canvas class = "scroll" id="scroll-starfield3" width="2400" height ="600"></canvas>
+    <canvas class = "scroll" id="scroll-starfield4" width="2400" height ="600"></canvas>
 
     <h1>Tic Tac Toe</h1>
-
-    <div id="gridContainer">
-      <div class="spaceDiv" id="0" value="0">
-      </div>
-      <div class="spaceDiv" id="1" value="1">
-      </div>
-      <div class="spaceDiv" id="2" value="2">
-      </div>
-      <div class="spaceDiv" id="3" value="3">
-      </div>
-      <div class="spaceDiv" id="4" value="4">
-      </div>
-      <div class="spaceDiv" id="5" value="5">
-      </div>
-      <div class="spaceDiv" id="6" value="6">
-      </div>
-      <div class="spaceDiv" id="7" value="7">
-      </div>
-      <div class="spaceDiv" id="8" value="8">
+    <div id="gridContainerContainer">
+      <div id="gridContainer">
+        <div class="spaceDiv" id="0" value="0">
+        </div>
+        <div class="spaceDiv" id="1" value="1">
+        </div>
+        <div class="spaceDiv" id="2" value="2">
+        </div>
+        <div class="spaceDiv" id="3" value="3">
+        </div>
+        <div class="spaceDiv" id="4" value="4">
+        </div>
+        <div class="spaceDiv" id="5" value="5">
+        </div>
+        <div class="spaceDiv" id="6" value="6">
+        </div>
+        <div class="spaceDiv" id="7" value="7">
+        </div>
+        <div class="spaceDiv" id="8" value="8">
+        </div>
       </div>
     </div>
     <h1 id="win"><button class="btn btn-dark" id="play-again">Play again!</button></h1>
