add main menue options
Co-Authored-by: Aaron Minnick <abminnick@gmail.com>

--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
     <canvas class = "scroll" id="scroll-starfield3" width="2400" height ="600"></canvas>
     <canvas class = "scroll" id="scroll-starfield4" width="2400" height ="600"></canvas>
 
-    <h1>Tic Tac Toe</h1>
+    <div id="mainMenuContainer">
+      <div id="mainMenu">
+        <h1>TIC TAC TOE</h1>
+        <h2>Select Your Game Mode</h2>
+      <div id="mainSubGrid">
+        <button class="btn btn-dark" id="single">Single Player</button>
+        <button class="btn btn-dark" id="double">Two Player</button>
+      </div>
+      </div>
+    </div>
     <div id="gridContainerContainer">
       <div id="gridContainer">
         <div class="spaceDiv" id="0" value="0">
