--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">  
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic Tac Toe</title>
+    <title>Tic Tac Toe IN SPACE!</title>
   </head>
   <body>
 
@@ -51,7 +51,7 @@
         </div>
       </div>
     </div>
-    <h1 id="win"><button class="btn btn-dark" id="play-again">Play again!</button></h1>
+    <h1 id="win"><span id="wintext"></span><button class="btn btn-dark" id="play-again">Play again!</button><button class="btn btn-dark" id="switch-modes">Change game mode.</button></h1>
 
   </body>
 </html>         
